--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.1"
   }
